# Inception

./: ft_server.html  ft_services.html
linux_ver/: Makefile  README.md
linux_ver/srcs/: .env  docker-compose.yml
linux_ver/srcs/requirements/nginx/conf/: nginx.conf
mac_ver/: CMakeLists.txt
mac_ver/42-inception/: MEMO.md  Makefile  mariadb_flow.txt
mac_ver/42-inception/srcs/: docker-compose.yml
mac_ver/42-inception/srcs/requirements/nginx/: Dockerfile
mac_ver/42-inception/srcs/requirements/wordpress/: Dockerfile
mac_ver/Inception/srcs/requirements/nginx/: Dockerfile
ogura/42-inception/: Makefile
ogura/42-inception/srcs/requirements/nginx/: Dockerfile
ogura/42-inception/srcs/requirements/tools/: shogura.42.fr.crt
sample_dir/: CMakeLists.txt
sample_dir/42-inception/: Makefile
sample_dir/42-inception/srcs/: docker-compose.yml
sample_dir/42-inception/srcs/requirements/mariadb/: Dockerfile
sample_dir/42-inception/srcs/requirements/nginx/: Dockerfile
sample_dir/42-inception/srcs/requirements/nginx/conf/: nginx.conf
sample_dir/42-inception/srcs/requirements/wordpress/: Dockerfile
sample_dir/42-inception/srcs/requirements/wordpress/conf/: hoge.php  www.conf
sample_dir/42-inception/srcs/requirements/wordpress/tools/: wordpress.sh
seoul/: docker-compose.yaml
srcs/: .env  docker-compose.yml
yuki/: makefile
yuki/srcs/requirements/mariadb/: Dockerfile  docker-compose.yml
yuki/srcs/requirements/nginx/: Dockerfile  docker-compose.yml  dokcer-compose.yml  memo
yuki/srcs/requirements/wordpress/: Dockerfile  docker-compose.yml
(+17 files in other folders)
